--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -31,7 +31,7 @@
                 </div>
                 <div id="header-navbar-collapse" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-left">
-                        {% if user %}
+                        {% if request.user %}
                         <li>
                             <a href="{% url 'artists:artist_list' %}">Artists</a>
                         </li>
@@ -47,7 +47,7 @@
                         {% endif %}
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        {% if user %}
+                        {% if request.user %}
                         <li>
                             <p class="navbar-text">Welcome!
                                 <div class="btn-group">
@@ -56,17 +56,17 @@
                                             aria-haspopup="true" aria-expanded="false"
                                             style="padding-top: 15px;padding-bottom: 0px;">
                                         <span style="color: #fff;font-weight: bold;">
-                                            {% if user.myuser %}
-                                                {{ user.myuser.nickname }}
+                                            {% if request.user.myuser %}
+                                                {{ request.user.myuser.nickname }}
                                             {% else %}
-                                                {{ user.nickname }}
+                                                {{ request.user.nickname }}
                                             {% endif %}
                                         </span>
                                     </button>
 
                                     <ul class="dropdown-menu">
                                         <li><a href="{{ user.myuser.get_absolute_url }}">My Profile</a></li>
-                                        <li><a href="#">My Follow</a></li>
+                                        <li><a href="{% url 'core:follow_list' %}">My Follow</a></li>
                                         <li><a href="{% url 'core:like_list' %}">My Like</a></li>
                                         <li role="separator" class="divider"></li>
                                         <li><a href="{% url 'core:set_password' %}">Reset Password</a></li>
@@ -96,6 +96,8 @@
             <p class="text-center">©All rights reserved</p>
             <h5 class="text-center"> Powered by&nbsp;
                 <a href="https://github.com/Mr-Phoebe">HaonanWu</a>
+                <a> & </a>
+                <a href="https://github.com/dtccx">ChangxingCao</a>
             </h5>
         </div>
     </footer>
