--- a/core/templates/core/follow_list.html
+++ b/core/templates/core/follow_list.html
@@ -1,9 +1,9 @@
 {% extends "core/base.html" %}
-{% block title %}User Like List{% endblock %}
+{% block title %}User Follow List{% endblock %}
 {% block content %}
-    <h1 class="page-header">Favorite Artists</h1>
+    <h1 class="page-header">Users you follow</h1>
     <table class="table table-hover">
-        {% if artists %}
+        {% if stars %}
             <thead>
                 <tr>
                     <th>Name</th>
@@ -12,23 +12,23 @@
                 </tr>
             </thead>
             <tbody>
-                {% for artist in artists %}
+                {% for star in stars %}
                 <tr>
-                    <td>{{ artist.name }}</td>
+                    <td>{{ star.nickname }}</td>
                     <td>
-                        <a href="{{ artist.get_absolute_url }}">
+                        <a href="{{ star.get_absolute_url }}">
                         <button class="btn btn-info">Detail</button>
                         </a>
                     </td>
                     <td>
-                        <button class="btn btn-danger">Unlike</button>
+                        <button class="btn btn-danger">UnFollow</button>
                     </td>
                 </tr>
                 {% endfor %}
             </tbody>
 
         {% else %}
-            <p>No favorite artists.</p>
+            <p>No Followers.</p>
         {% endif %}
 
         <hr>
