--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -36,7 +36,10 @@
                             <a href="{% url 'artists:artist_list' %}">Artists</a>
                         </li>
                         <li>
-                            <a href="{% url 'album:album_list' %}">Albums</a>
+                            <a href="{% url 'albums:album_list' %}">Albums</a>
+                        </li>
+                        <li>
+                            <a href="{% url 'playlists:playlist_list' %}">Playlist</a>
                         </li>
                         <li>
                             <a href="{% url 'songs:song_list' %}">Songs</a>
@@ -47,7 +50,7 @@
                         {% endif %}
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        {% if request.user %}
+                        {% if user %}
                         <li>
                             <p class="navbar-text">Welcome!
                                 <div class="btn-group">
@@ -56,11 +59,7 @@
                                             aria-haspopup="true" aria-expanded="false"
                                             style="padding-top: 15px;padding-bottom: 0px;">
                                         <span style="color: #fff;font-weight: bold;">
-                                            {% if request.user.myuser %}
-                                                {{ request.user.myuser.nickname }}
-                                            {% else %}
-                                                {{ request.user.nickname }}
-                                            {% endif %}
+                                            {{ request.user.myuser.nickname }}
                                         </span>
                                     </button>
 
