--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -39,7 +39,7 @@
                             <a href="{% url 'albums:album_list' %}">Albums</a>
                         </li>
                         <li>
-                            <a href="{% url 'playlists:playlist_list' %}">Playlist</a>
+                            <a href="{% url 'playlists:playlist_list' uid=0 %}">Playlist</a>
                         </li>
                         <li>
                             <a href="{% url 'songs:song_list' %}">Songs</a>
