--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -34,7 +34,7 @@
                         <a href="{% url 'albums:album_list' %}">Albums</a>
                 </li>
                 <li class="list-group-item">
-                        <a href="{% url 'playlists:playlist_list' %}">Playlist</a>
+                        <a href="{% url 'playlists:playlist_list' uid=0 %}">Playlist</a>
                 </li>
                 <li class="list-group-item">
                         <a href="{% url 'songs:song_list' %}">Songs</a>
