--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -67,6 +67,7 @@
                                         <li><a href="{{ user.myuser.get_absolute_url }}">My Profile</a></li>
                                         <li><a href="{% url 'core:follow_list' %}">My Follow</a></li>
                                         <li><a href="{% url 'core:like_list' %}">My Like</a></li>
+                                        <li><a href="{% url 'playlists:playlist_list' uid=request.user.myuser.pk%}">My Playlist</a></li>
                                         <li role="separator" class="divider"></li>
                                         <li><a href="{% url 'core:set_password' %}">Reset Password</a></li>
                                         <li><a href="{% url 'core:logout' %}">Logout</a></li>
