--- a/playlists/templates/playlists/playlist_list.html
+++ b/playlists/templates/playlists/playlist_list.html
@@ -43,7 +43,7 @@
                     window.location.href = '{% url 'playlists:playlist_list' uid=0 %}';
                 }
             </script>
-            <button class="btn btn-default" onClick="doReset()">
+            <button class="btn btn-default" onClick="doReset()" style="margin-top: 10px;">
                 Clear
             </button>
         </div>
