--- a/playlists/templates/playlists/playlist_list.html
+++ b/playlists/templates/playlists/playlist_list.html
@@ -24,6 +24,7 @@
                 <div class="form-group">
                     {{ filter.form.as_p }}
                     <button class="btn btn-default" type="submit">
+                        <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
                         Search
                     </button>
                 </div>
@@ -44,6 +45,7 @@
                 }
             </script>
             <button class="btn btn-default" onClick="doReset()" style="margin-top: 10px;">
+                <span class="glyphicon glyphicon-remove-sign" aria-hidden="true"></span>
                 Clear
             </button>
         </div>
