--- a/albums/templates/albums/album_detail.html
+++ b/albums/templates/albums/album_detail.html
@@ -1,21 +1,17 @@
 {% extends "core/base.html" %}
-
+{% block title %}{{ albums.album_name }}{% endblock %}
 {% block content %}
-<div class="row">
-  <h1>
-    Albums THIS IS DEAILS
-  </h1>
-</div>
-
-
-<div class="row">
-<p>
-    <li><a href="{{album.get_absolute_url}}">
-        {{albums.artist_name}}</a>
-    </li>
-    <li>{{albums.year_released}}</li>
-
-</p>
-
-</div>
+    <h1 class="page-header">{{ albums.album_name }}</h1>
+    <div class="row">
+        <div class="col-md-6 col-md-offset-1">
+            <li>
+                <a href="{{album.get_absolute_url}}">
+                {{ albums.album_name }}
+                </a>
+            </li>
+            <li>
+                {{albums.year_released}}
+            </li>
+        </div>
+    </div>
 {% endblock content %}
