--- a/songs/templates/songs/song_edit.html
+++ b/songs/templates/songs/song_edit.html
@@ -1,22 +1,21 @@
 {% extends "core/base.html" %}
 
-{% block title %}Song{% endblock %}
 {% block content %}
-    {% if song %}
-        <h1 class="page-header">Edit: {{song.name}}</h1>
-    {% else %}
-        <h1 class="page-header">New Song</h1>
-    {% endif %}
+{% load bootstrap %}
+
+        {% if song %}
+            <h1 class="page-header">Edit: {{song.name}}</h1>
+        {% else %}
+            <h1 class="page-header">New Song Rate</h1>
+        {% endif %}
 
     <form action="" method="POST" class="input_form">
         {% csrf_token %}
 
-        {% for field in form %}
-            {% include "core/_form_input.html" %}
-        {% endfor %}
+        {{ form|bootstrap }}
 
         <button type="submit" class="btn btn-primary btn-block save_button">
-            Save
+            Rate
         </button>
 
     </form>
