--- a/songs/templates/songs/song_detail.html
+++ b/songs/templates/songs/song_detail.html
@@ -1,5 +1,4 @@
 {% extends "core/base.html" %}
-
 {% load embed_video_tags %}
 {% block title %}{{song.name}}{% endblock %}
 {% block content %}
@@ -9,7 +8,7 @@
             Song: {{song.name}}
             <div class="pull-right">
                 <a href="{% url 'songs:song_torate' id=song.pk %}">
-                    <i class="fa fa-pencil-square">Rate</i>
+                    <button class="btn btn-danger">Rate</button>
                 </a>
             </div>
         </h2>
@@ -25,10 +24,6 @@
             <p class="lead">Length</p>
             <p>{{song.length}}</p>
         </div>
-
-
-
-
 
     <div class="row">
         <div class="col-md-6 col-md-offset-1">
