--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -63,7 +63,7 @@
                                     </button>
 
                                     <ul class="dropdown-menu">
-                                        <li><a href="{{ user.myuser.get_absolute_url }}">My Profile</a></li>
+                                        <li><a href="{{ request.user.myuser.get_absolute_url }}">My Profile</a></li>
                                         <li><a href="{% url 'core:follow_list' %}">My Follow</a></li>
                                         <li><a href="{% url 'core:like_list' %}">My Like</a></li>
                                         <li><a href="{% url 'songs:play_list' id=request.user.myuser.pk %}">My Play</a></li>
