--- a/songs/templates/songs/song_detail.html
+++ b/songs/templates/songs/song_detail.html
@@ -2,14 +2,84 @@
 {% load embed_video_tags %}
 {% block title %}{{song.name}}{% endblock %}
 {% block content %}
-
     <div class="row">
         <h2>
             Song: {{song.name}}
+            <script>
+                function getCookie(name) {
+                    var arr, reg = new RegExp("(^| )" + name + "=([^;]*)(;|$)");
+                    if (arr = document.cookie.match(reg)) return unescape(arr[2]);
+                    else return null;
+                };
+                function torate() {
+                    $.ajaxSetup({
+                        headers: {
+                                "X-CSRFToken": getCookie("csrftoken")
+                                }
+                    });
+                    $.confirm({
+                        title: 'Rate',
+                        content: '' +
+                            '<form action="" method="POST" class="input_form">'+
+                            '<div class="form-group">'+
+                            '<label class="control-label  " for="id_score">Score</label>'+
+                            '<div class=" ">'+
+                            '<select class=" form-control" id="id_score" name="score">'+
+                            {% for score in scores %}
+                                {% if score %}
+                                    '<option value="{{ forloop.counter }}" selected="selected" >{{ forloop.counter }}</option>'+
+                                {% else %}
+                                    '<option value="{{ forloop.counter }}">{{ forloop.counter }}</option>'+
+                                {% endif %}
+                            {% endfor %}
+                            '</select>'+
+                            '</div>'+
+                            '</div>'+
+                            '</form>',
+                        buttons: {
+                            formSubmit: {
+                                text: 'Submit',
+                                btnClass: 'btn-blue',
+                                action: function () {
+                                    var score = this.$content.find('#id_score').val();
+                                    $.post("{% url 'songs:song_torate' %}", {
+                                            'songid':{{ song.pk }},
+                                            'score': score,
+                                        },function(ret){
+                                            if(ret['state'] == 1) {
+                                                $.confirm({
+                                                    title: 'Thank you!',
+                                                    content: 'Rate Successfully!',
+                                                    buttons: {
+                                                        confirm: function () {
+                                                            //close
+                                                        }
+                                                    }
+                                                });
+                                            } else {
+                                                $.confirm({
+                                                    title: 'Sorry!',
+                                                    content: 'Fail to Rate!',
+                                                    buttons: {
+                                                        confirm: function () {
+                                                            //close
+                                                        }
+                                                    }
+                                                });
+                                            }
+                                        }
+                                    )
+                                }
+                            },
+                            cancel: function () {
+                                //close
+                            },
+                        }
+                    });
+                };
+            </script>
             <div class="pull-right">
-                <a href="{% url 'songs:song_torate' id=song.pk %}">
-                    <button class="btn btn-danger">Rate</button>
-                </a>
+                <button class="btn btn-danger" onclick="torate()">Rate</button>
             </div>
         </h2>
     </div>
@@ -19,11 +89,12 @@
             <p>{{song.get_artist_names}}</p>
         </div>
     </div>
-        <div class="row">
+    <div class="row">
         <div class="col-md-5 col-offset-1">
             <p class="lead">Length</p>
             <p>{{song.length}}</p>
         </div>
+    </div>
 
     <div class="row">
         <div class="col-md-6 col-md-offset-1">
