--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -7,20 +7,20 @@
         Music Library
     </h1>
 
-    <div class="row">
-        <div class="col-md-5 col-md-offset-4">
-            <div class="input_form">
-                <form action="{% url 'artists:artist_list' %}">
-                    <label for="index-search" style="margin-bottom: 10px;">
-                        Search Library
-                    </label>
-                    <input type="text" id="index-search" class="form-control" name="q" placeholder="Find an artist.">
-                    <br>
-                    <button type="submit" class="btn btn-primary btn-block">Submit</button>
-                </form>
-            </div>
-        </div>
-    </div>
+{#    <div class="row">#}
+{#        <div class="col-md-5 col-md-offset-4">#}
+{#            <div class="input_form">#}
+{#                <form action="{% url 'artists:artist_list' %}">#}
+{#                    <label for="index-search" style="margin-bottom: 10px;">#}
+{#                        Search Library#}
+{#                    </label>#}
+{#                    <input type="text" id="index-search" class="form-control" name="q" placeholder="Find an artist.">#}
+{#                    <br>#}
+{#                    <button type="submit" class="btn btn-primary btn-block">Submit</button>#}
+{#                </form>#}
+{#            </div>#}
+{#        </div>#}
+{#    </div>#}
 
 
     <hr>
