--- a/songs/templates/songs/song_list.html
+++ b/songs/templates/songs/song_list.html
@@ -40,7 +40,9 @@
                 <tr>
                     <th>Name</th>
                     <th>Released Time</th>
-                    <th>Detial</th>
+                    <th>Play Times</th>
+                    <th>Rates</th>
+                    <th>Detail</th>
                     <th>Play</th>
                     <th>Addlist</th>
                 </tr>
@@ -50,6 +52,8 @@
                 <tr>
                     <td>{{ song.name }}</td>
                     <td>{{ song.year_released }}</td>
+                    <td>{{ song.play_count }}</td>
+                    <td>{{ song.get_average_rate }}</td>
                     <td>
                         <a href="{{ song.get_absolute_url }}">
                         <button class="btn btn-info">Detail</button>
@@ -61,6 +65,7 @@
                         </a>
                     </td>
                     <td>
+                        <a href="{% url 'playlists:playlist_new'%}" class="">
                         <button class="btn btn-success">Addlist</button>
                     </td>
                 </tr>
