--- a/albums/templates/albums/album_list.html
+++ b/albums/templates/albums/album_list.html
@@ -34,7 +34,7 @@
             </button>
         </div>
     </div>
-    <div class="table table-hover">
+    <table class="table table-hover" style="margin-top: 50px;">
         <thead>
             <tr>
                 <th>Name</th>
@@ -55,5 +55,5 @@
                 </tr>
             {% endfor %}
         </tbody>
-    </div>
+    </table>
 {% endblock content %}
