--- a/artists/templates/artists/artist_list.html
+++ b/artists/templates/artists/artist_list.html
@@ -3,9 +3,9 @@
 {% block title %}Artists{% endblock %}
 {% block content %}
     <h1 class="page-header">Artists</h1>
-    <div class = "rowt">
-        <table class="table table-hover">
-        {% if artists %}
+    <div class = "row" >
+        <table class="table table-hover" style="margin-top: 50px;">
+        {% if datas %}
             <thead>
                 <tr>
                     <th>Name</th>
@@ -14,16 +14,16 @@
                 </tr>
             </thead>
             <tbody>
-            {% for artist in artists %}
+            {% for data in datas %}
 
                 <tr>
-                    <td>{{artist.name}}</td>
+                    <td>{{ data.artist.name}}</td>
                     <td>
-                        <a href="{{artist.get_absolute_url }}">
+                        <a href="{{ data.artist.get_absolute_url }}">
                         <button class="btn btn-info">Detail</button>
                         </a>
                     </td>
-                    {% if state == 'like' %}
+                    {% if data.status %}
                     <td>
                     <button class="btn btn-primary" type="submit" id="unlike">Unlike</button>
                     </td>
