--- a/playlists/templates/playlists/playlist_list.html
+++ b/playlists/templates/playlists/playlist_list.html
@@ -50,7 +50,7 @@
             </button>
         </div>
     </div>
-    <table class="table table-hover">
+    <table class="table table-hover" style="margin-top: 50px;">
         <thead>
             <tr>
                 <th>Name</th>
