--- a/songs/templates/songs/song_list.html
+++ b/songs/templates/songs/song_list.html
@@ -33,7 +33,7 @@
                 </button>
             </div>
         </div>
-        <table class="table table-hover">
+        <table class="table table-hover"  style="margin-top: 50px;">
 
         {% if filter.qs %}
             <thead>
@@ -67,6 +67,7 @@
                     <td>
                         <a href="{% url 'playlists:playlist_new'%}" class="">
                         <button class="btn btn-success">Addlist</button>
+                        </a>
                     </td>
                 </tr>
             {% endfor %}
