--- a/core/templates/core/follow_list.html
+++ b/core/templates/core/follow_list.html
@@ -2,6 +2,7 @@
 {% block title %}User Follow List{% endblock %}
 {% block content %}
     <h1 class="page-header">Users you follow</h1>
+    <div>
     <table class="table table-hover">
         {% if stars %}
             <thead>
@@ -21,9 +22,38 @@
                         </a>
                     </td>
                     <td>
-                        <button class="btn btn-danger">UnFollow</button>
+                        <button class="btn btn-primary" type="submit" id="unfollow">UnFollow</button>
                     </td>
                 </tr>
+                        <script>
+        $(document).ready(function(){
+            $.ajaxSetup({
+            headers: {
+                    "X-CSRFToken": getCookie("csrftoken")
+                    }
+                });
+            $("#unfollow").click(function(){
+                $.post("{% url 'core:unfollow_user' %}", {
+                    'userid':{{ user.pk }}
+                },
+                function(ret){
+                     $.confirm({
+                            title: 'Congratuation!',
+                            content: 'Unfollow the user successfully!',
+                            buttons: {
+                                confirm: function () {
+                                    $.alert('Confirmed!');
+                                    window.location.reload();
+                                }
+                            }
+                        });
+
+                    }
+                }
+            )
+            });
+        });
+    </script>
                 {% endfor %}
             </tbody>
 
@@ -33,7 +63,11 @@
 
         <hr>
 
+
     </table>
+    </div>
+
+
 {% endblock content %}  
 
 
