--- a/core/templates/core/user_list.html
+++ b/core/templates/core/user_list.html
@@ -34,7 +34,7 @@
                     </td>
                     <td>
                         {% if data.status %}
-                            <button class="btn btn-success" type="submit" id="follow">Unfollow</button>
+                            <button class="btn btn-success" type="submit" id="unfollow">Unfollow</button>
                         {% else %}
                             <button class="btn btn-success" type="submit" id="follow">Follow</button>
                         {% endif %}
