--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -66,7 +66,7 @@
                                         <li><a href="{{ request.user.myuser.get_absolute_url }}">My Profile</a></li>
                                         <li><a href="{% url 'core:follow_list' %}">My Follow</a></li>
                                         <li><a href="{% url 'core:like_list' %}">My Like</a></li>
-                                        <li><a href="{% url 'songs:play_list' id=request.user.myuser.pk %}">My Play</a></li>
+                                        <li><a href="{% url 'songs:play_list' id=request.user.myuser.pk %}">My Play History</a></li>
                                         <li><a href="{% url 'playlists:playlist_list' uid=request.user.myuser.pk%}">My Playlist</a></li>
                                         <li role="separator" class="divider"></li>
                                         <li><a href="{% url 'core:set_password' %}">Reset Password</a></li>
